--- a/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/config/bootstrap.yml
@@ -17,7 +17,7 @@ spring:
     active: #spring.profiles.active#
   cloud:
     config:
-      fail-fast: false # if not in "prod" profile, do not force to use Spring Cloud Config
+      fail-fast: true # if not in "prod" profile, do not force to use Spring Cloud Config
       uri: http://admin:${jhipster.registry.password}@localhost:8761/config
       # name of the config server's property source (file.yml) that we want to use
       name: footballAggregation
